<resources>
    <string name="app_name">ecommerce seller</string>
    <string name="estimated_price">you will get %1$s Egp </string>
    <string name="login_email_hint">enter your email</string>
    <string name="register_activity_title">Register as seller</string>
    <string name="create_your_account">Create your Account</string>
    <string name="input_name_hint">Enter your name</string>
    <string name="email_input_hint">Enter your email</string>
    <string name="password_edit_hint">Enter password</string>
    <string name="mobile_edit_hint">Enter your mobile</string>
    <string name="market_name_hint">Enter market name</string>
    <string name="state_edit_hint">state</string>
    <string name="city_edit_hint">city</string>
    <string name="address_edit_hint">Enter your address</string>
    <string name="register_btn_txt">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="required_field">required field</string>
    <string name="uncompeted_data_msg">please fill all data</string>
    <string name="login_activity_title">Login to your account</string>
    <string name="login_btn_txt">Login</string>
    <string name="have_no_account_signup">don\'t have an account yet? signUp</string>
    <string name="login_to_your_account">Login to your account</string>
</resources>
