<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/registration_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:title="@string/register_activity_title"
            />

        <TextView
            android:id="@+id/create_account_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/create_your_account"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:fontFamily="monospace"
            android:textColor="@android:color/black"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_register_txt_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            app:errorTextAppearance="@style/erroStyle"
            app:layout_constraintTop_toBottomOf="@+id/create_account_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            >

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/name_reg_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_name_hint"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_register_txt_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:errorTextAppearance="@style/erroStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_register_txt_input_layout">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email_reg_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_input_hint"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_register_txt_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:errorTextAppearance="@style/erroStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_register_txt_input_layout">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password_reg_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_edit_hint"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile_register_txt_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:errorTextAppearance="@style/erroStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_register_txt_input_layout">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/mobile_reg_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_edit_hint"
                android:inputType="number"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/market_name_register_txt_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:errorTextAppearance="@style/erroStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobile_register_txt_input_layout">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/market_name_reg_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/market_name_hint"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/state_register_txt_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:errorTextAppearance="@style/erroStyle"
            app:layout_constraintEnd_toStartOf="@+id/city_register_txt_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/market_name_register_txt_input_layout">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/state_reg_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state_edit_hint"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/city_register_txt_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:errorTextAppearance="@style/erroStyle"
            app:layout_constraintStart_toEndOf="@+id/state_register_txt_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/market_name_register_txt_input_layout">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/city_reg_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city_edit_hint"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/address_register_txt_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            app:errorTextAppearance="@style/erroStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/state_register_txt_input_layout">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/address_reg_edit_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_edit_hint"
                android:inputType="text"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_register_txt_input_layout"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/register_btn"
            android:text="@string/register_btn_txt"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="monospace"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_login"
            android:layout_gravity="center"
            android:id="@+id/login_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>